# disk-usage-analyzer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cloudflare/downloads/: tsconfig.json  wrangler.jsonc
cloudflare/downloads/public/: index.html  styles.css
cloudflare/downloads/src/: index.test.ts  index.ts  manifest.ts  worker-configuration.d.ts
crates/du-core/: Cargo.toml
crates/du-core/src/: lib.rs
crates/du-core/tests/: scanner.rs
scripts/: check-release-version.mjs  prepare-release-artifacts.mjs  release-utils.mjs  release-utils.test.mjs  set-release-version.mjs
src/: App.test.tsx  App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/tests/: state.rs
src/lib/: api.ts  format.ts  scanState.test.ts  scanState.ts  settings.test.ts  settings.ts  types.ts
