[workspace]
members = ["crates/du-core", "src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/LCSmith87/disk-usage-analyzer"
homepage = "https://github.com/LCSmith87/disk-usage-analyzer"
description = "Cross-platform disk usage explorer built with Tauri, Rust, React, and TypeScript."
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
